# OBCA

./: IPOPT.md  OBCA.md  corridor.md
MATLAB-eval/: URE.m  UXE2.m  distance_map.m  logload_figure.m  logload_figure_UXE.m  maptxt.m  video_path.m
cpp-version/HA/: CMakeLists.txt  map.txt
cpp-version/HA/include/: log.h  time_tool.h
cpp-version/HA/msg/: Coordinate.c  Coordinate.idl  Freespacecell.c  Image.c  Image.idl  Imageparkingspaceinfo.idl  ObstacleInfo.c  ObstacleInfo.idl  Parking_next_step.c  Parking_next_step.idl  Parkingspace.c  Parkingspaceinfo.idl  Parkingspaceinfo2.c  Parkingtodisplay.c  Position.c  RadarDataAPA.c  Selectedinfo.c  Selectedinfo.idl  UdpTestData.c  Uss.idl  Uss_dis_to_ui.c  Uss_obs.c  Uss_ui.c  Ussinfo_app.c  Ussinfo_app.idl  Vehtarposndisp.c  apa_nav.c  app_park.c  app_status.c  avm_nav.idl  cam_ai_obstacle.c  fusion_parkinginfo.c  fusion_parkinginfo.idl  fusion_parkingtarget.idl  geometry_completeinfo_ctrl.c  geometry_pathinfo_ctrl.c  geometry_pathinfo_ctrl.idl  geometry_statusinfo_ctrl.idl  head.idl  hmi_srv_ai.idl  (+14 more)
cpp-version/HA/msg/builtin_interfaces/msg/: Duration.c  Time.idl
cpp-version/HA/msg/cxx-file/: HelloWorldData.hpp
cpp-version/HA/msg/std_msgs/msg/: Header.c
cpp-version/HA/src/: findpath.cpp
cpp-version/HA_circle/: CMakeLists.txt  main.cpp  map.txt  plot.py  test.cpp
cpp-version/HA_circle/include/: data_type.h  findpath.h  obcaSolver.h
cpp-version/HA_circle/msg/: plan_completeinfo_ctrl.idl  plan_statusinfo_ctrl.idl  vehiclecontrol_planj_reqinfo.idl
cpp-version/HA_circle/python/: plot1.py  plot10.py  plot2.py  plot3.py  plot3_URE.py  plot8.py  plot8_URE.py  plot_matrix.py  video_path.m
cpp-version/HA_corridor/: CMakeLists.txt  main.cpp  map.txt  plan_HybridAstar.txt
cpp-version/HA_corridor/msg/: Uss.c  (+3 more)
cpp-version/Latest-code-on-car/: CMakeLists.txt  main.cpp  map.txt  plan.txt  planConfig.json  plot_result.cpp  test.cpp
cpp-version/Latest-code-on-car/common/: CMakeLists.txt  base_data_struct.h  common_global_function.cpp  data_interface.cpp  dynamic_level_plan.cpp  dynamic_plan_vertical.cpp  global_function.h  global_variable.cpp  global_variable.h  log_info.cpp  parking_directly.cpp  process.cpp  read_plan_config.cpp  reeds_shepp.cpp
cpp-version/Latest-code-on-car/common/include/: log.h
cpp-version/Latest-code-on-car/geometry/: CMakeLists.txt  geometry.cpp  geometry_global_function.cpp  head_paking.cpp  parking_in_level.cpp  parking_out_level.cpp  rear_parking.cpp  rear_parking_multi.cpp
cpp-version/Latest-code-on-car/hybridastar/: hybridastar.cpp  hybridastar_global_function.cpp  hybridastar_planning.cpp
cpp-version/Latest-code-on-car/map/: CMakeLists.txt  change_fusion_map.cpp  modify_map_hybrid_astar.cpp  modify_map_level.cpp  modify_map_vertical.cpp
cpp-version/Latest-code-on-car/msg/: ObstacleInfo2.h  TopMachine.h  apa_api.h  fusion_gridmap.c  fusion_parkingtarget.h  geometry_pathinfo_ctrl.h
cpp-version/Latest-code-on-car/msg/builtin_interfaces/msg/: Duration.h
cpp-version/TDR-OBCA/: CMakeLists.txt  main.cpp  map.txt  obst.txt  output.txt  plan_HybridAstar.txt
cpp-version/auto/: CMakeLists.txt  main.cpp
cpp-version/auto/python/mat_plot/: CMakeLists.txt  main.cpp
cpp-version/auto/python/mat_plot/include/: global_variable.h  matplotlibcpp.h
cpp-version/corridor-OBCA/: CMakeLists.txt  corridor.txt  main.cpp  path-opt.txt  path-ori.txt  plan_HybridAstar.txt
cpp-version/corridor-OBCA/include/: corridor.h  findpath.h  obcaSolver.h
cpp-version/corridor-OBCA/msg/: Freespacecell_rt.idl  Parkingspaceinfo2.idl  Position.idl  app_shakehand.c  app_ui_park.c  fusion_parkingtarget.c  vehiclecontrol_plana_interfaceinfo.c  vehiclecontrol_plana_reqinfo.c  vehiclecontrol_planj_interfaceinfo.c
cpp-version/corridor-OBCA/msg/std_msgs/msg/: Header.idl
cpp-version/corridor-OBCA/src/: AllSender.cpp  bucket_queue.cpp  corridor.cpp  dynamic_CC_road.cpp  dynamic_Level.cpp  dynamic_multi.cpp  findpath.cpp  obcaSolver.cpp
cpp-version/examples-casadi/: ex1.cpp  ex2.cpp
cpp-version/planAlgorithm_heading_test_two_way/: CMakeLists.txt  MRplanConfig.json  UREplanConfig.json  build.sh  main.cpp  map.txt  plan.txt  planConfig.json  plot_result.cpp  tmp.txt
cpp-version/test_MR/: main.cpp
cpp-version/test_MR_two_way_voro/: CMakeLists.txt  main.cpp  map.txt  plan_HybridAstar.txt
cpp-version/test_MR_two_way_voro/include/: findpath.h
cpp-version/test_MR_two_way_voro/msg/: BYDAutoInterface.c  Vehtarposndisp.idl  head.c
cpp-version/test_MR_two_way_voro/src/: dynamic_CC_road.cpp  dynamic_Level.cpp  dynamic_Oblique.cpp  dynamic_vertical.cpp  findpath.cpp  result.ppm
(+143 files in other folders)
